--- a/index.html
+++ b/index.html
@@ -1,19 +1,76 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Hello World!</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
-  </body>
+<html class="no-js">
 
-  <script>
-    // You can also require other files to run in this process
-    require('./renderer.js')
-  </script>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>AI</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/app.css" rel="stylesheet" />
+</head>
+
+<body>
+    <!--[if lt IE 8]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a
+        href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
+    <div class="handle">
+        <div class="title">
+            AI
+        </div>
+        <div class="close">
+            x
+        </div>
+    </div>
+    <div id="main" class="container">
+        <canvas id="canvas" height="600" width="1000"></canvas>
+    </div>
+    <footer>
+        <div class="container">
+            <div class="flex">
+                <div class="flex-item bottom text-right">&copy; Copyright 2016 - <strong>AI</strong></div>
+            </div>
+        </div>
+    </footer>
+    <script>
+        if (typeof module === 'object') {
+            window.module = module;
+            module = undefined;
+        }
+    </script>
+    <script src="js/jquery-2.0.3.min.js"></script>
+    <script src="js/moment.min.js"></script>
+    <script src="engine/engine.js"></script>
+    <script src="engine/math/vector2D.js"></script>
+    <script src="engine/graphics/circle.js"></script>
+    <script>
+        if (window.module) module = window.module;
+    </script>
+    <script src="renderer.js"></script>
+    <script>
+        var canvas = document.getElementById('canvas');
+        var context = canvas.getContext('2d');
+        var game = new Engine(canvas, context);
+        for (var i = 0; i < 2500; i++) {
+            var randomX = getRandomInt(0, canvas.width);
+            var randomY = getRandomInt(0, canvas.height);
+            var speed = getRandomInt(1, 4);
+            var size = getRandomInt(5, 10);
+            var c = new Circle(randomX, randomY, size, speed);
+            game.add(c);
+        }
+        var f = function() {
+            game.update();
+            game.draw();
+            requestAnimationFrame(f);
+        };
+        f();
+
+        function getRandomInt(min, max) {
+            return Math.floor(Math.random() * (max - min + 1)) + min;
+        }
+    </script>
+</body>
+
 </html>
